--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -88,5 +88,11 @@
   "volume_name_error": "Name must be lowercase letters, numbers and hyphens.",
   "volume_path_error": "Device path must start with a '/'.",
   "volume_size_error": "The size must be a positive integer.",
-  "generic_missing_field": "Please enter a {field}."
+  "generic_missing_field": "Please enter a {field}.",
+  "no_storage_class_found": "No storage class found.",
+  "storage_class_is_required": "A storage class is required in order to create a volume. Please create one in Kubernetes.",
+  "learn_more": "Learn more",
+  "solutions": "Solutions",
+  "versions": "Versions",
+  "deployed_version": "Deployed Version"
 }
