--- a/ui/src/translations/fr.json
+++ b/ui/src/translations/fr.json
@@ -95,6 +95,7 @@
   "storage_class_is_required": "Une classe de stockage est requise pour créer un volume. Veuillez en créer une dans Kubernetes.",
   "learn_more": "En savoir plus",
   "solutions": "Solutions",
+  "available_solutions": "Solutions disponibles",
   "versions": "Versions",
   "deployed_version": "Version Déployée",
   "action": "Action",
