--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -117,5 +117,7 @@
   "search": "Search…",
   "detailed_information": "Detailed Information",
   "failed_to_create_volume":"Failed to create volume.",
-  "not_applicable": "Not applicable"
+  "not_applicable": "Not applicable",
+  "create_new_stack": "Create a New Stack",
+  "stacks": "Stacks"
 }
