--- a/ui/src/translations/fr.json
+++ b/ui/src/translations/fr.json
@@ -117,5 +117,7 @@
   "search": "Rechercher…",
   "detailed_information": "Informations détaillées",
   "failed_to_create_volume":"Échec de la création du volume.",
-  "not_applicable": "Non applicable"
+  "not_applicable": "Non applicable",
+  "create_new_stack": "Créer une nouvelle stack",
+  "stacks": "Stacks"
 }
