--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -119,5 +119,6 @@
   "failed_to_create_volume":"Failed to create volume.",
   "not_applicable": "Not applicable",
   "create_new_stack": "Create a New Stack",
-  "stacks": "Stacks"
+  "stacks": "Stacks",
+  "description": "Description"
 }
