--- a/ui/src/translations/fr.json
+++ b/ui/src/translations/fr.json
@@ -119,5 +119,6 @@
   "failed_to_create_volume":"Échec de la création du volume.",
   "not_applicable": "Non applicable",
   "create_new_stack": "Créer une nouvelle stack",
-  "stacks": "Stacks"
+  "stacks": "Stacks",
+  "description": "Description"
 }
