--- a/ui/src/translations/fr.json
+++ b/ui/src/translations/fr.json
@@ -118,8 +118,8 @@
   "detailed_information": "Informations détaillées",
   "failed_to_create_volume":"Échec de la création du volume.",
   "not_applicable": "Non applicable",
-  "create_new_stack": "Créer une nouvelle stack",
-  "stacks": "Stacks",
+  "environments": "Environnements",
+  "create_new_environment": "Créer un nouvel environnement",
   "description": "Description",
   "add_solution_to_stack": "Ajout d'une solution à la stack {stack}"
 }
